Refs #61868 fix explorer menu button alignment

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -354,6 +354,12 @@ header {
     a {
       text-decoration: none;
     }
+
+    &+div {
+      @include min-screen($screen-desktop) {
+        margin-left: auto;
+      }
+    }
   }
 
   .site-name {
